Fix validation message spacing

--- a/css/compat/themes/compat-ettore-3110-beta-1.css
+++ b/css/compat/themes/compat-ettore-3110-beta-1.css
@@ -3,3 +3,7 @@ body.theme-ettore.has-fc-button-styles.has-checkout-layout--multi-step .fc-step_
 body.theme-ettore.has-fc-button-styles.has-checkout-layout--multi-step .fc-wrapper .fc-step__substep-save .qodef-m-text {
   line-height: 1em !important;
 }
+
+body.theme-ettore div.woocommerce .form-row .woocommerce-error {
+  margin-bottom: 0 !important;
+}
